k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: usermgmt
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: usermgmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: usermgmt
    spec:
      containers:
        - name: frontend
          image: 192.168.0.146:5000/user-management-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: usermgmt
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: usermgmt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
